// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Menu /> render matched route is active in snapshot 1`] = `
<Menustyles__Links
  align="middle"
  currentPath="/"
  isAuthenticated={true}
  links={
    Array [
      Object {
        "href": "/",
        "title": "Home",
      },
      Object {
        "hard": true,
        "href": "/adminapi/proposals",
        "title": "Proposals",
      },
      Object {
        "hard": true,
        "href": "/adminapi/bookings",
        "title": "Bookings",
      },
    ]
  }
>
  <Menustyles__MenuLink
    data-active={true}
    key="f356800ca07b23550b76c6af4a9a9bfcbed66569"
    onClick={[Function]}
    spaced={true}
    to="/"
  >
    Home
  </Menustyles__MenuLink>
  <Menustyles__MenuLink
    data-active={false}
    href="/adminapi/proposals"
    key="a0f67a2565e41ba4ddc16523148c8f938ece8ee8"
    onClick={[Function]}
    spaced={true}
  >
    Proposals
  </Menustyles__MenuLink>
  <Menustyles__MenuLink
    data-active={false}
    href="/adminapi/bookings"
    key="c00bbec074586d35b85b35c8eac656d1b0b45f29"
    onClick={[Function]}
    spaced={true}
  >
    Bookings
  </Menustyles__MenuLink>
</Menustyles__Links>
`;

exports[`<Menu /> render matches logged in snapshot 1`] = `
<Menustyles__Links
  align="middle"
  currentPath=""
  isAuthenticated={true}
  links={
    Array [
      Object {
        "href": "/",
        "title": "Home",
      },
      Object {
        "hard": true,
        "href": "/adminapi/proposals",
        "title": "Proposals",
      },
      Object {
        "hard": true,
        "href": "/adminapi/bookings",
        "title": "Bookings",
      },
    ]
  }
>
  <Menustyles__MenuLink
    data-active={false}
    key="f356800ca07b23550b76c6af4a9a9bfcbed66569"
    onClick={[Function]}
    spaced={true}
    to="/"
  >
    Home
  </Menustyles__MenuLink>
  <Menustyles__MenuLink
    data-active={false}
    href="/adminapi/proposals"
    key="a0f67a2565e41ba4ddc16523148c8f938ece8ee8"
    onClick={[Function]}
    spaced={true}
  >
    Proposals
  </Menustyles__MenuLink>
  <Menustyles__MenuLink
    data-active={false}
    href="/adminapi/bookings"
    key="c00bbec074586d35b85b35c8eac656d1b0b45f29"
    onClick={[Function]}
    spaced={true}
  >
    Bookings
  </Menustyles__MenuLink>
</Menustyles__Links>
`;

exports[`<Menu /> render matches logged out snapshot 1`] = `
<Menustyles__Links
  align="middle"
  currentPath=""
  isAuthenticated={false}
  links={
    Array [
      Object {
        "href": "/",
        "title": "Home",
      },
      Object {
        "hard": true,
        "href": "/adminapi/proposals",
        "title": "Proposals",
      },
      Object {
        "hard": true,
        "href": "/adminapi/bookings",
        "title": "Bookings",
      },
    ]
  }
>
  <Menustyles__MenuLink
    data-active={false}
    key="f356800ca07b23550b76c6af4a9a9bfcbed66569"
    onClick={[Function]}
    spaced={true}
    to="/"
  >
    Home
  </Menustyles__MenuLink>
  <Menustyles__MenuLink
    data-active={false}
    href="/adminapi/proposals"
    key="a0f67a2565e41ba4ddc16523148c8f938ece8ee8"
    onClick={[Function]}
    spaced={true}
  >
    Proposals
  </Menustyles__MenuLink>
  <Menustyles__MenuLink
    data-active={false}
    href="/adminapi/bookings"
    key="c00bbec074586d35b85b35c8eac656d1b0b45f29"
    onClick={[Function]}
    spaced={true}
  >
    Bookings
  </Menustyles__MenuLink>
</Menustyles__Links>
`;
